fix : body movement fix on mobile device

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -140,7 +140,7 @@
 
   .position-hidden {
     position: fixed;
-    width: 100%;
+    width: 60%;
     height: 100%;
     left: 0;
     top: 0;
@@ -151,9 +151,13 @@
     overflow-y: auto;
   }
 
+  .position-fixed {
+    position: fixed;
+  }
+
   .position-open {
     position: fixed;
-    width: 100%;
+    width: 60%;
     height: 100%;
     left: 0;
     top: 0;
